[package]
name = "fabrik"
version = "0.6.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["cargo"] }

[dev-dependencies]
indoc = "1.0"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
