[package]
name = "fabrik"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
clap = { version = "3.1", default-features = false, features = ["cargo"] }
criterion = { version = "0.4", default-features = false }

[[example]]
name = "cli"

[[bench]]
name = "benchmark"
harness = false
